// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Pagination First page 1`] = `
<div
  class="fd-pagination"
>
  
  
  <span
    class="fd-pagination__total"
  >
    30 items
  </span>
  
  
  <nav
    class="fd-pagination__nav"
  >
    
      
    <button
      aria-disabled="true"
      aria-label="Previous"
      class="fd-pagination__link fd-pagination__link--previous"
      href="#"
      role="navigation"
    />
    
      
    <button
      class="fd-pagination__link is-selected"
      href="#"
      role="navigation"
    >
      1
    </button>
    
      
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      2
    </button>
    
      
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      3
    </button>
    
      
    <button
      aria-disabled="false"
      aria-label="Next"
      class="fd-pagination__link fd-pagination__link--next"
      href="#"
      role="navigation"
    />
    
  
  </nav>
  

</div>
`;

exports[`Storyshots Components/Pagination Last page 1`] = `
<div
  class="fd-pagination"
>
  

  <span
    class="fd-pagination__total"
  >
    500 items
  </span>
  

  <nav
    class="fd-pagination__nav"
  >
    
  
    <button
      aria-disabled="false"
      aria-label="Previous"
      class="fd-pagination__link fd-pagination__link--previous"
      href="#"
      role="navigation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      1
    </button>
    
  
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      49
    </button>
    
  
    <button
      class="fd-pagination__link is-selected"
      href="#"
      role="navigation"
    >
      50
    </button>
    
  
    <button
      aria-disabled="true"
      aria-label="Next"
      class="fd-pagination__link fd-pagination__link--next"
      href="#"
      role="navigation"
    />
    

  </nav>
  

</div>
`;

exports[`Storyshots Components/Pagination Middle pages 1`] = `
<div
  class="fd-pagination"
>
  

  <span
    class="fd-pagination__total"
  >
    500 items
  </span>
  

  <nav
    class="fd-pagination__nav"
  >
    
  
    <button
      aria-disabled="false"
      aria-label="Previous"
      class="fd-pagination__link fd-pagination__link--previous"
      href="#"
      role="navigation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      1
    </button>
    
  
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      21
    </button>
    
  
    <button
      class="fd-pagination__link is-selected"
      href="#"
      role="navigation"
    >
      22
    </button>
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      23
    </button>
    
  
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      50
    </button>
    
  
    <button
      aria-disabled="false"
      aria-label="Next"
      class="fd-pagination__link fd-pagination__link--next"
      href="#"
      role="navigation"
    />
    

  </nav>
  

</div>
`;

exports[`Storyshots Components/Pagination Mutliple pages 1`] = `
<div
  class="fd-pagination"
>
  

  <span
    class="fd-pagination__total"
  >
    500 items
  </span>
  

  <nav
    class="fd-pagination__nav"
  >
    
  
    <button
      aria-disabled="false"
      aria-label="Previous"
      class="fd-pagination__link fd-pagination__link--previous"
      href="#"
      role="navigation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      1
    </button>
    
  
    <button
      class="fd-pagination__link is-selected"
      href="#"
      role="navigation"
    >
      2
    </button>
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      3
    </button>
    
  
    <span
      class="fd-pagination__more"
      role="presentation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      50
    </button>
    
  
    <button
      aria-disabled="false"
      aria-label="Next"
      class="fd-pagination__link fd-pagination__link--next"
      href="#"
      role="navigation"
    />
    

  </nav>
  

</div>
`;

exports[`Storyshots Components/Pagination Second page 1`] = `
<div
  class="fd-pagination"
>
  

  <span
    class="fd-pagination__total"
  >
    30 items
  </span>
  

  <nav
    class="fd-pagination__nav"
  >
    
  
    <button
      aria-disabled="false"
      aria-label="Previous"
      class="fd-pagination__link fd-pagination__link--previous"
      href="#"
      role="navigation"
    />
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      1
    </button>
    
  
    <button
      class="fd-pagination__link is-selected"
      href="#"
      role="navigation"
    >
      2
    </button>
    
  
    <button
      class="fd-pagination__link"
      href="#"
      role="navigation"
    >
      3
    </button>
    
  
    <button
      aria-disabled="false"
      aria-label="Next"
      class="fd-pagination__link fd-pagination__link--next"
      href="#"
      role="navigation"
    />
    

  </nav>
  

</div>
`;
